--- a/src/app/components/calendar/calendar.component.scss
+++ b/src/app/components/calendar/calendar.component.scss
@@ -1,3 +1,46 @@
 .spacer {
   flex: 1 1 auto;
 }
+
+
+.calendar {
+  display: grid;
+  grid-template-rows: auto 1fr;
+  width: 100%;
+
+  .calendar-header {
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    background-color: darkseagreen;
+    font-weight: bold;
+  }
+
+  .calendar-body {
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    grid-auto-rows: minmax(150px, auto);
+  }
+
+  .calendar-cell {
+    border: 1px solid #ccc;
+    padding: 10px;
+    text-align: center;
+    box-sizing: border-box;
+    .cell-date {
+      font-weight: bold;
+      text-align: left;
+
+    }
+    .hidden {
+      color: grey;
+    }
+
+  }
+  .selected {
+    border-color: red;
+  }
+  .current {
+    background-color: blue;
+  }
+
+}
