--- a/src/app/components/reminder-form/reminder-form.component.html
+++ b/src/app/components/reminder-form/reminder-form.component.html
@@ -1,5 +1,69 @@
 <mat-dialog-content>
 
 
+<h2 mat-dialog-title>{{ data ? 'Edit Reminder' : 'New Reminder' }}</h2>
+
+<form [formGroup]="reminderFormGroup" (ngSubmit)="onSubmit()" *ngIf="reminderFormGroup">
+  <mat-dialog-content>
+    <div class="form-container">
+      <mat-form-field appearance="outline" class="full-width">
+        <mat-label>Reminder Text</mat-label>
+        <input matInput formControlName="text" placeholder="Enter reminder text" maxlength="30">
+<!--        <mat-hint align="end">{{reminderFormGroup.get('text')?.value?.length || 0}}/30</mat-hint>-->
+        <mat-error *ngIf="reminderFormGroup.get('text')?.hasError('required')">
+          Text is required
+        </mat-error>
+      </mat-form-field>
+
+      <div class="date-row">
+        <mat-form-field appearance="outline">
+          <mat-label>Year</mat-label>
+          <input matInput type="number" formControlName="year">
+          <mat-error *ngIf="reminderFormGroup.get('year')?.hasError('required')">
+            Year is required
+          </mat-error>
+        </mat-form-field>
+
+        <mat-form-field appearance="outline">
+          <mat-label>Month</mat-label>
+          <mat-select formControlName="month">
+            <mat-option *ngFor="let month of months; let i = index" [value]="i">
+              {{ month }}
+            </mat-option>
+          </mat-select>
+          <mat-error *ngIf="reminderFormGroup.get('month')?.hasError('required')">
+            Month is required
+          </mat-error>
+        </mat-form-field>
+      </div>
+
+      <mat-form-field appearance="outline" class="full-width">
+        <mat-label>Time</mat-label>
+        <input matInput type="time" formControlName="time">
+      </mat-form-field>
+
+      <mat-form-field appearance="outline" class="full-width">
+        <mat-label>City</mat-label>
+        <input matInput formControlName="city" placeholder="Enter city name">
+      </mat-form-field>
+
+      <mat-form-field appearance="outline" class="full-width">
+        <mat-label>Color</mat-label>
+        <input matInput type="color" formControlName="color">
+        <mat-error *ngIf="reminderFormGroup.get('color')?.hasError('required')">
+          Color is required
+        </mat-error>
+      </mat-form-field>
+    </div>
+  </mat-dialog-content>
+
+  <mat-dialog-actions align="end">
+    <button mat-button mat-dialog-close>Cancel</button>
+    <button mat-raised-button color="primary" type="submit" [disabled]="!reminderFormGroup.valid">Save</button>
+  </mat-dialog-actions>
+</form>
+
+
+
 
 </mat-dialog-content>
