feat(reminder) display reminders

--- a/src/app/components/calendar/calendar.component.html
+++ b/src/app/components/calendar/calendar.component.html
@@ -60,6 +60,12 @@
         >
           {{ day.date.getDate() }}
         </div>
+
+     <div class="cell-content">
+       <div *ngFor="let reminder of vm.reminders.get(day.date.toDateString())" class="reminder">
+         {{ reminder.text }}
+       </div>
+     </div>
       </div>
     </div>
   </div>
