--- a/src/app/components/calendar/calendar.component.html
+++ b/src/app/components/calendar/calendar.component.html
@@ -34,13 +34,14 @@
 
   <div class="calendar">
     <div class="calendar-header">
-      <div class="calendar-cell">Sun</div>
-      <div class="calendar-cell">Mon</div>
-      <div class="calendar-cell">Tue</div>
-      <div class="calendar-cell">Wed</div>
-      <div class="calendar-cell">Thu</div>
-      <div class="calendar-cell">Fri</div>
-      <div class="calendar-cell">Sat</div>
+      <span >Sunday</span>
+      <span >Monday</span>
+      <span >Tuesday</span>
+      <span >Wednesday</span>
+      <span >Thursday</span>
+      <span >Friday</span>
+      <span >Saturday</span>
+
     </div>
     <div class="calendar-body">
       <div
@@ -61,11 +62,9 @@
           {{ day.date.getDate() }}
         </div>
 
-     <div class="cell-content">
-       <div *ngFor="let reminder of vm.reminders.get(day.date.toDateString())" class="reminder">
-         {{ reminder.text }}
-       </div>
-     </div>
+     <app-reminder [reminders]=" vm.reminders.get(day.date.toDateString())">
+
+     </app-reminder>
       </div>
     </div>
   </div>
