--- a/src/app/components/calendar/reminder/reminder.component.html
+++ b/src/app/components/calendar/reminder/reminder.component.html
@@ -2,7 +2,7 @@
   <div class="reminder-item" *ngFor="let reminder of reminders">
     <div class="color-label" [style.backgroundColor]="reminder.color || 'grey'"></div>
       <div class="reminder-content" [title]="reminder.text">       <span class="reminder-time">{{reminder.dateTime | date:'shortTime'}} </span>
-        {{reminder.text}}</div>
+        {{reminder.weather}}</div>
 
   </div>
 </div>
