--- a/src/app/components/calendar/reminder/reminder.component.html
+++ b/src/app/components/calendar/reminder/reminder.component.html
@@ -1,11 +1,13 @@
 <div class="reminders-container" *ngIf="reminders && reminders.length">
   <div class="reminder-item" *ngFor="let reminder of reminders">
-    <div class="color-label" [style.backgroundColor]="reminder.color || 'grey'"></div>
+
+    <div class="color-label" [style.backgroundColor]="reminder.color || 'grey'">
+
+    </div>
       <div class="reminder-content" [title]="reminder.text">       <span class="reminder-time">{{reminder.dateTime | date:'shortTime'}} </span>
         {{reminder.text}}</div>
-    <div class="weather">
-     <app-icon [iconName]="reminder.weather.icon">  </app-icon>
-    </div>
 
+    <div class="icon"><app-icon *ngIf="reminder?.weather?.icon" [iconData]="reminder.weather">  </app-icon>
+    </div>
   </div>
 </div>
