feat(reminder) show ability to edit

--- a/src/app/components/calendar/calendar.component.scss
+++ b/src/app/components/calendar/calendar.component.scss
@@ -61,6 +61,7 @@
       display: none; /* For Chrome, Safari, and Opera */
     }
      .cell-date {
+       cursor: pointer;
       background-color: white;
       z-index: 1;
       width: 30px;
