--- a/src/app/components/reminder-form/reminder-form.component.html
+++ b/src/app/components/reminder-form/reminder-form.component.html
@@ -1,26 +1,33 @@
-
-
 <h2 mat-dialog-title>{{ data.reminder ? 'Edit Reminder' : 'New Reminder' }}</h2>
 
-<form [formGroup]="reminderFormGroup" (ngSubmit)="onSubmit()" *ngIf="reminderFormGroup">
+<form
+  [formGroup]="reminderFormGroup"
+  (ngSubmit)="onSubmit()"
+  *ngIf="reminderFormGroup"
+>
   <mat-dialog-content>
-
     <div class="form-container">
       <mat-form-field appearance="outline" class="full-width">
         <mat-label>Reminder Text</mat-label>
-        <textarea matInput formControlName="text" placeholder="Enter reminder text"  maxlength="30"
-                   cdkTextareaAutosize
-                  #autosize="cdkTextareaAutosize"
-                  cdkAutosizeMinRows=4
+        <textarea
+          matInput
+          formControlName="text"
+          placeholder="Enter reminder text"
+          maxlength="30"
+          cdkTextareaAutosize
+          #autosize="cdkTextareaAutosize"
+          cdkAutosizeMinRows="4"
         ></textarea>
-        <mat-hint align="end">{{reminderFormGroup.get('text')?.value?.length || 0}}/30</mat-hint>
+        <mat-hint align="end"
+          >{{ reminderFormGroup.get('text')?.value?.length || 0 }}/30</mat-hint
+        >
         <mat-error *ngIf="reminderFormGroup.get('text')?.hasError('required')">
           Text is required
         </mat-error>
       </mat-form-field>
       <mat-form-field appearance="outline" class="full-width">
         <mat-label>Date</mat-label>
-        <input matInput [matDatepicker]="picker" formControlName="date">
+        <input matInput [matDatepicker]="picker" formControlName="date" />
         <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
         <mat-datepicker #picker></mat-datepicker>
         <mat-error *ngIf="reminderFormGroup.get('date')?.hasError('required')">
@@ -28,43 +35,67 @@
         </mat-error>
       </mat-form-field>
 
-
-<div class="inline-field-wrapper">
-  <mat-form-field appearance="outline" >
-  <mat-label>Time</mat-label>
-  <input matInput type="time" formControlName="time" step="60">
-</mat-form-field>
-  <mat-form-field appearance="outline">
-    <mat-label>Color</mat-label>
-    <mat-select formControlName="color">
-      <mat-option *ngFor="let color of colors" [value]="color.value" [class]="'color-' + color.value">
-        {{ color.name }}
-      </mat-option>
-    </mat-select>
-    <mat-error *ngIf="reminderFormGroup.get('color')?.hasError('required')">
-      Color is required
-    </mat-error>
-  </mat-form-field>
-</div>
-
+      <div class="inline-field-wrapper">
+        <mat-form-field appearance="outline">
+          <mat-label>Time</mat-label>
+          <input matInput type="time" formControlName="time" step="60" />
+          <mat-error
+            *ngIf="reminderFormGroup.get('time')?.hasError('required')"
+          >
+            Time is required
+          </mat-error>
+        </mat-form-field>
+        <mat-form-field appearance="outline">
+          <mat-label>Color</mat-label>
+          <mat-select formControlName="color">
+            <mat-option
+              *ngFor="let color of colors"
+              [value]="color.value"
+              [class]="'color-' + color.value"
+            >
+              {{ color.name }}
+            </mat-option>
+          </mat-select>
+          <mat-error
+            *ngIf="reminderFormGroup.get('color')?.hasError('required')"
+          >
+            Color is required
+          </mat-error>
+        </mat-form-field>
+      </div>
 
       <mat-form-field appearance="outline" class="full-width">
         <mat-label>City</mat-label>
-        <input matInput formControlName="city" placeholder="Enter city name">
-      </mat-form-field>
+
+        <mat-select formControlName="city">
+          <mat-option
+            *ngFor="let city of cities"
+            [value]="city"
+          >
+            {{ city }}
+          </mat-option>
+        </mat-select>
+         <mat-error *ngIf="reminderFormGroup.get('city')?.hasError('required')">
+          City is required
+        </mat-error>
 
 
 
+
+
+       </mat-form-field>
     </div>
   </mat-dialog-content>
 
   <mat-dialog-actions align="end">
     <button mat-button mat-dialog-close>Cancel</button>
-    <button mat-raised-button color="primary" type="submit" [disabled]="!reminderFormGroup.valid">Save</button>
+    <button
+      mat-raised-button
+      color="primary"
+      type="submit"
+      [disabled]="!reminderFormGroup.valid || reminderFormGroup.pristine"
+    >
+      Save
+    </button>
   </mat-dialog-actions>
 </form>
-
-
-
-
-
