--- a/src/app/components/reminder-form/reminder-form.component.html
+++ b/src/app/components/reminder-form/reminder-form.component.html
@@ -45,45 +45,37 @@
             Time is required
           </mat-error>
         </mat-form-field>
-        <mat-form-field appearance="outline">
-          <mat-label>Color</mat-label>
-          <mat-select formControlName="color">
-            <mat-option
-              *ngFor="let color of colors"
-              [value]="color.value"
-              [class]="'color-' + color.value"
-            >
-              {{ color.name }}
-            </mat-option>
-          </mat-select>
-          <mat-error
-            *ngIf="reminderFormGroup.get('color')?.hasError('required')"
-          >
-            Color is required
-          </mat-error>
-        </mat-form-field>
+  <mat-radio-group
+  aria-labelledby="example-radio-group-label"
+  class="example-radio-group"
+  formControlName="color"
+>
+  @for (color of colors; track color) {
+
+    <mat-radio-button class="example-radio-button" [value]="color"
+    ><div class="color" [ngStyle]="{'background-color': color.value}"></div
+    > </mat-radio-button>
+  }
+  <mat-error *ngIf="reminderFormGroup.get('color')?.hasError('required')">
+    Color is required
+  </mat-error>
+</mat-radio-group>
+
+
       </div>
 
       <mat-form-field appearance="outline" class="full-width">
         <mat-label>City</mat-label>
 
         <mat-select formControlName="city">
-          <mat-option
-            *ngFor="let city of cities"
-            [value]="city"
-          >
+          <mat-option *ngFor="let city of cities" [value]="city">
             {{ city }}
           </mat-option>
         </mat-select>
-         <mat-error *ngIf="reminderFormGroup.get('city')?.hasError('required')">
+        <mat-error *ngIf="reminderFormGroup.get('city')?.hasError('required')">
           City is required
         </mat-error>
-
-
-
-
-
-       </mat-form-field>
+      </mat-form-field>
     </div>
   </mat-dialog-content>
 
