--- a/src/app/components/calendar/calendar.component.scss
+++ b/src/app/components/calendar/calendar.component.scss
@@ -77,8 +77,10 @@ $bg-accent: #dfe4f3;
         cursor: pointer;
         background-color: white;
         z-index: 1;
-        width: 30px;
-        border-radius: 0 2px 24px 2px;
+        margin-left:2px;
+        margin-top:2px;
+        width: 26px;
+        border-radius: 0 2px 20px 2px;
         height: 24px;
         position: absolute;
         font-weight: bold;
@@ -109,6 +111,7 @@ $bg-accent: #dfe4f3;
       &.current{
         .cell-date {
           color: $accent;
+            background-color: $bg-accent;
         }
         background-color: $bg-accent;
       }
