--- a/src/app/components/reminder-form/reminder-form.component.html
+++ b/src/app/components/reminder-form/reminder-form.component.html
@@ -25,26 +25,58 @@
           Text is required
         </mat-error>
       </mat-form-field>
-      <mat-form-field appearance="outline" class="full-width">
-        <mat-label>Date</mat-label>
-        <input matInput [matDatepicker]="picker" formControlName="date" />
-        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-        <mat-datepicker #picker></mat-datepicker>
-        <mat-error *ngIf="reminderFormGroup.get('date')?.hasError('required')">
-          Date is required
-        </mat-error>
+<!--      <mat-form-field appearance="outline" class="full-width">-->
+<!--        <mat-label>Date</mat-label>-->
+<!--        <input matInput [matDatepicker]="picker" formControlName="date" />-->
+<!--        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>-->
+<!--        <mat-datepicker #picker></mat-datepicker>-->
+<!--        <mat-error *ngIf="reminderFormGroup.get('date')?.hasError('required')">-->
+<!--          Date is required-->
+<!--        </mat-error>-->
+<!--      </mat-form-field>-->
+
+
+
+      <mat-form-field>
+        <mat-label>Meeting date</mat-label>
+        <input matInput [matDatepicker]="datepicker" formControlName="newTime">
+        <mat-datepicker #datepicker/>
+        <mat-datepicker-toggle [for]="datepicker" matSuffix/>
       </mat-form-field>
 
+      <mat-form-field>
+        <mat-label>Meeting time</mat-label>
+        <input matInput
+               [matTimepicker]="timepicker"
+               formControlName="newTime"
+                 >
+        <mat-timepicker #timepicker/>
+        <mat-timepicker-toggle [for]="timepicker" matSuffix/>
+      </mat-form-field>
+
+
+
+
+<!--      <mat-form-field>-->
+<!--        <mat-label>Pick a time</mat-label>-->
+<!--        <input matInput formControlName="newTime"  [matTimepicker]="timePicker">-->
+<!--        <mat-timepicker-toggle matIconSuffix [for]="timePicker">-->
+<!--          <mat-icon matTimepickerToggleIcon>keyboard_arrow_down</mat-icon>-->
+<!--        </mat-timepicker-toggle>-->
+<!--        <mat-timepicker #timePicker/>-->
+<!--      </mat-form-field>-->
+
+
       <div class="inline-field-wrapper">
-        <mat-form-field appearance="outline">
-          <mat-label>Time</mat-label>
-          <input matInput type="time" formControlName="time" step="60" />
-          <mat-error
-            *ngIf="reminderFormGroup.get('time')?.hasError('required')"
-          >
-            Time is required
-          </mat-error>
-        </mat-form-field>
+<!--        <mat-form-field appearance="outline">-->
+<!--          <mat-label>Time</mat-label>-->
+<!--          <input matInput type="time" formControlName="time" step="60" />-->
+<!--          <mat-error-->
+<!--            *ngIf="reminderFormGroup.get('time')?.hasError('required')"-->
+<!--          >-->
+<!--            Time is required-->
+<!--          </mat-error>-->
+<!--        </mat-form-field>-->
   <mat-radio-group
   aria-labelledby="example-radio-group-label"
   class="example-radio-group"
