--- a/src/app/components/calendar/reminder/reminder.component.html
+++ b/src/app/components/calendar/reminder/reminder.component.html
@@ -1,13 +1,13 @@
 <div class="reminders-container" *ngIf="reminders && reminders.length">
-  <div (click)="openReminderForm(reminder.dateTime, reminder)" class="reminder-item" *ngFor="let reminder of reminders">
+  <div *ngFor="let r of reminders" (click)="openReminderForm(r.id, r.reminder)" class="reminder-item" >
 
-    <div  class="color-label" [style.backgroundColor]="reminder.color || 'grey'">
+    <div  class="color-label" [style.backgroundColor]="r.reminder.color || 'grey'">
 
     </div>
-      <div class="reminder-content" [title]="reminder.text">       <span class="reminder-time">{{reminder.dateTime | date:'shortTime'}} </span>
-        {{reminder.text}}</div>
+      <div class="reminder-content" [title]="r.reminder.text">       <span class="reminder-time">{{r.reminder.dateTime | date:'shortTime'}} </span>
+        {{r.reminder.text}}</div>
 
-    <div class="icon"><app-icon *ngIf="reminder?.weather?.icon" [iconData]="reminder.weather">  </app-icon>
+    <div class="icon"><app-icon *ngIf="r.reminder?.weather?.icon" [iconData]="r.reminder.weather">  </app-icon>
     </div>
   </div>
 </div>
