--- a/src/app/components/reminder-form/reminder-form.component.html
+++ b/src/app/components/reminder-form/reminder-form.component.html
@@ -96,7 +96,7 @@
       mat-raised-button
       color="primary"
       type="submit"
-      [disabled]="!reminderFormGroup.valid || reminderFormGroup.pristine"
+      [disabled]="!canSubmit"
     >
       Save
     </button>
