--- a/src/app/components/calendar/icon/icon.component.html
+++ b/src/app/components/calendar/icon/icon.component.html
@@ -1,8 +1,8 @@
- <div class="icon" [innerHTML]="svgIcon" #tooltip="matTooltip"
-      [matTooltip]="tooltipText"
-      matTooltipHideDelay="200"
-      aria-label="Button that displays a tooltip that hides when scrolled out of the container"
- >  </div>
-
-
-
+<div
+  class="icon"
+  [innerHTML]="svgIcon"
+  #tooltip="matTooltip"
+  [matTooltip]="tooltipText"
+  matTooltipHideDelay="200"
+  aria-label="Button that displays a tooltip that hides when scrolled out of the container"
+></div>
