feat(reminder) add color

--- a/src/app/components/calendar/calendar.component.scss
+++ b/src/app/components/calendar/calendar.component.scss
@@ -8,6 +8,10 @@ $secondary: #8e8e8e;
   flex: 1 1 auto;
 }
 
+mat-icon{
+  color:$accent;
+}
+
 .year-select {
   display: flex;
   justify-content: center;
